[package]
name = "con-mon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
lazy_static = "1.4.0"
log = "0.4.14"
regex = "1.5.4"
simplelog = "0.11.2"
tokio = {version = "1.17.0", features = ["full"]}
